feat: extend user search capability to blood group, city, and fullname